k8s/redis-deployment.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: redis-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis 
  template:
    metadata:
      labels:
        component: redis 
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
